// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-1xko9rp {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1q44afb {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1q44afb:hover .e1duuirp3,
.cache-1q44afb:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1q44afb:hover .e1duuirp3>.e1duuirp4,
.cache-1q44afb:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1xko9rp e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-1q44afb"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly and triggers change on borderedbox click 1`] = `
<DocumentFragment>
  .cache-1xko9rp {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1q44afb {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1q44afb:hover .e1duuirp3,
.cache-1q44afb:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1q44afb:hover .e1duuirp3>.e1duuirp4,
.cache-1q44afb:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1xko9rp e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-1q44afb"
          for="radioborderedbox-choice1"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice 1
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radioborderedbox-choice1"
            name="radioborderedbox"
            tabindex="0"
            type="radio"
            value="choice1"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice 1 description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-1vsb3yp {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
  border: 1px solid #4F0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1q44afb {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1q44afb:hover .e1duuirp3,
.cache-1q44afb:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1q44afb:hover .e1duuirp3>.e1duuirp4,
.cache-1q44afb:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-d37612 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-d37612.cache-d37612 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1vsb3yp e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-1q44afb"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-d37612"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="true"
            checked=""
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1qkgk8d {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
  cursor: not-allowed!important;
  color: #C4C9D6;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-meyke9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #C4C9D6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1qkgk8d e13z6rra3"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-meyke9"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when error 1`] = `
<DocumentFragment>
  .cache-27rdhi {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
  border: 1px solid #DD3252!important;
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1q44afb {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1q44afb:hover .e1duuirp3,
.cache-1q44afb:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1q44afb:hover .e1duuirp3>.e1duuirp4,
.cache-1q44afb:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1i7hkfc {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1i7hkfc.cache-1i7hkfc {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-27rdhi e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-1q44afb"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-1i7hkfc"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice description
    </div>
  </div>
  .cache-ne47lv {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-ne47lv"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    >
      Invalid value
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-1qkgk8d {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  display: block;
  cursor: not-allowed!important;
  color: #C4C9D6;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-meyke9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #C4C9D6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-1hsiwr9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #DD3252;
  color: #FFFFFF;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<div
    class="cache-1qkgk8d e13z6rra3"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-meyke9"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
      </div>
      <span
        class="e1g1zfwd0 cache-1u3lzwn"
      >
        (something)
      </span>
       
      <span
        aria-label="warning"
        class="egvl2gp0 cache-1hsiwr9"
        role="status"
      >
        Badge
      </span>
    </div>
    <div
      class="e1g1zfwd0 cache-1u3lzwn"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-sejyyr e13z6rra1"
    />
  </div>
</DocumentFragment>
`;
